--- a/index.html
+++ b/index.html
@@ -18,7 +18,55 @@
         <hr>
     </header>
     <main>
+        <!-- Spese -->
+        <section>
+            <h2>Le mie spese</h2>
+            <!-- Tabella spese -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <!-- /Tabella spese -->
+            <hr>
+        </section>
+        <!-- /Spese -->
+        <section>
 
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
     </main>
 </body>
 </html>
