--- a/index.html
+++ b/index.html
@@ -58,9 +58,18 @@
             <hr>
         </section>
         <!-- /Spese -->
+        <!-- Cose da fare -->
         <section>
-
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#10005;</li>
+                <li>Visitare greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10005;</li>
+            </ul>
+            <hr>
         </section>
+        <!-- /Cose da fare -->
         <section>
 
         </section>
