--- a/index.html
+++ b/index.html
@@ -70,12 +70,47 @@
             <hr>
         </section>
         <!-- /Cose da fare -->
+        <!-- Info utili -->
+        <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <!-- Numeri -->
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <!-- /Numeri -->
+                <!-- Hotel -->
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <!-- /Hotel -->
+                <!-- Voli -->
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
+                    </ul>
+                </li>
+                <!-- /Voli -->
+            </ol>
+            <hr>
+        </section>
+        <!-- /Info utili -->
+        <!-- Foto -->
         <section>
 
         </section>
-        <section>
-
-        </section>
+        <!-- /Foto -->
     </main>
 </body>
 </html>
