--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>Il mio Viaggio a Londra</h1>
         <!-- Trittico foto -->
         <div>
-            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="trittico-1">
-            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="trittico-2">
-            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="trittico-3">
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="Panoramica Londra 1">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Panoramica Londra 2">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Panoramica Londra 3">
         </div>
         <!-- /Trittico foto -->
         <hr>
@@ -108,7 +108,9 @@
         <!-- /Info utili -->
         <!-- Foto -->
         <section>
-
+            <h3>Le foto</h3>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="St Paul's Cathedral">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge">
         </section>
         <!-- /Foto -->
     </main>
